@@ -169,17 +169,17 @@ void MemoryModel::serialize(QDataStream* stream) {
 	switch (m_align) {
 	case 1:
 		for (uint32_t i = m_selection.first; i < m_selection.second; i += m_align) {
-			*stream << (quint8) m_cpu->memory.load8(m_cpu, i, nullptr);
+			*stream << GBAView8(m_cpu, i);
 		}
 		break;
 	case 2:
 		for (uint32_t i = m_selection.first; i < m_selection.second; i += m_align) {
-			*stream << (quint16) m_cpu->memory.load16(m_cpu, i, nullptr);
+			*stream << GBAView16(m_cpu, i);
 		}
 		break;
 	case 4:
 		for (uint32_t i = m_selection.first; i < m_selection.second; i += m_align) {
-			*stream << (quint32) m_cpu->memory.load32(m_cpu, i, nullptr);
+			*stream << GBAView32(m_cpu, i);
 		}
 		break;
 	}
@@ -230,7 +230,7 @@ void MemoryModel::paintEvent(QPaintEvent* event) {
 				} else {
 					painter.setPen(palette.color(QPalette::WindowText));
 				}
-				uint16_t b = m_cpu->memory.load16(m_cpu, address, nullptr);
+				uint16_t b = GBAView16(m_cpu, address);
 				painter.drawStaticText(
 				    QPointF(m_cellSize.width() * (x + 1.0) - 2 * m_letterWidth + m_margins.left(), yp),
 				    m_staticNumbers[(b >> 8) & 0xFF]);
@@ -255,7 +255,7 @@ void MemoryModel::paintEvent(QPaintEvent* event) {
 				} else {
 					painter.setPen(palette.color(QPalette::WindowText));
 				}
-				uint32_t b = m_cpu->memory.load32(m_cpu, address, nullptr);
+				uint32_t b = GBAView32(m_cpu, address);
 				painter.drawStaticText(
 				    QPointF(m_cellSize.width() * (x + 2.0) - 4 * m_letterWidth + m_margins.left(), yp),
 				    m_staticNumbers[(b >> 24) & 0xFF]);
@@ -285,7 +285,7 @@ void MemoryModel::paintEvent(QPaintEvent* event) {
 				} else {
 					painter.setPen(palette.color(QPalette::WindowText));
 				}
-				uint8_t b = m_cpu->memory.load8(m_cpu, address, nullptr);
+				uint8_t b = GBAView8(m_cpu, address);
 				painter.drawStaticText(QPointF(m_cellSize.width() * (x + 0.5) - m_letterWidth + m_margins.left(), yp),
 				                       m_staticNumbers[b]);
 			}
@@ -293,7 +293,7 @@ void MemoryModel::paintEvent(QPaintEvent* event) {
 		}
 		painter.setPen(palette.color(QPalette::WindowText));
 		for (int x = 0; x < 16; ++x) {
-			uint8_t b = m_cpu->memory.load8(m_cpu, (y + m_top) * 16 + x + m_base, nullptr);
+			uint8_t b = GBAView8(m_cpu, (y + m_top) * 16 + x + m_base);
 			painter.drawStaticText(
 			    QPointF(viewport()->size().width() - (16 - x) * m_margins.right() / 17.0 - m_letterWidth * 0.5, yp),
 			    b < 0x80 ? m_staticAscii[b] : m_staticAscii[0]);
